adding in the buttons needed

--- a/beyond40task/src/components/reviewsAverage/reviewsAverage.css
+++ b/beyond40task/src/components/reviewsAverage/reviewsAverage.css
@@ -1,7 +1,5 @@
 .reviewsAverage-container{
-    border-right: lightgray;
-    border-style: solid;
-    border-width: 1px;
+    padding-left: 10%;
 }
 
 
