--- a/beyond40task/src/components/AskQuestion/askQuestionButton.css
+++ b/beyond40task/src/components/AskQuestion/askQuestionButton.css
@@ -1,9 +1,8 @@
-.button button{
+.question-button button{
     text-align: center;
     padding: 5px 20px;
     background-color: white;
     border-radius: 3px;
     font-family:Arial, Helvetica, sans-serif;
-    margin-left: 10px;
     box-shadow: rgba(136,136,136,0.42) 2px 3px 5px 0px;
 }
