--- a/beyond40task/src/components/AskQuestion/askQuestionButton.css
+++ b/beyond40task/src/components/AskQuestion/askQuestionButton.css
@@ -6,3 +6,8 @@
     font-family:Arial, Helvetica, sans-serif;
     box-shadow: rgba(136,136,136,0.42) 2px 3px 5px 0px;
 }
+
+.question-button :hover{
+    box-shadow: none;
+    cursor:pointer
+}
