--- a/beyond40task/src/components/header/header.css
+++ b/beyond40task/src/components/header/header.css
@@ -1,8 +1,7 @@
-.header-title{
-    display: flex;
-    justify-content: center;
-   font-family: 'Montserrat,Arial,sans-serif' ;
-   font-weight: bolder;
-   font-size: 24px;
-    
+.header-title {
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat,Arial,sans-serif";
+  font-weight: bolder;
+  font-size: 24px;
 }
