--- a/beyond40task/src/components/progessbars/progressBars.css
+++ b/beyond40task/src/components/progessbars/progressBars.css
@@ -1,30 +1,36 @@
-.progress-bar-container{
-    margin-left: 50px;
-    width: 100%;
-    max-height: 150px;
-    max-width: 350px;
-    border-right-width: 1px;
-    border-right-color: lightgray;
-    border-right-style: solid;
-    border-left-color: lightgray;
-    border-left-width: 1px;
-    border-left-style: solid;
-    padding-left: 30px;
-    padding-bottom: 50px;
-   
+.progress-bar-container {
+  margin-left: 50px;
+  width: 100%;
+  max-height: 150px;
+  max-width: 350px;
+  border-right-width: 1px;
+  border-right-color: lightgray;
+  border-right-style: solid;
+  border-left-color: lightgray;
+  border-left-width: 1px;
+  border-left-style: solid;
+  padding-left: 30px;
+  padding-bottom: 50px;
 }
-.progress-bars{
-    align-items: center;
-    display: flex;
-    height: 30px;
-
+.progress-bars {
+  align-items: center;
+  display: flex;
+  height: 30px;
 }
-.progress{
-    margin-left: 15px;
+.progress {
+  margin-left: 15px;
 }
 
-.outside-label{
-    margin-top: 10px;
-    margin-left: 5px;
-    color:#777
+.outside-label {
+  margin-top: 10px;
+  margin-left: 5px;
+  color: #777;
 }
+
+.progress-bar-container :hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+/* .progress-bars :active :hover {
+  opacity: 0.5;
+} */
